# socks5-rs

./: Cargo.toml  config.json
src/: cipher.rs  client.rs  conf.rs  lib.rs  server.rs  shutdown.rs
src/client/: connection.rs  mod.rs
